@@ -1,5 +1,9 @@
 2002-01-15  John Levon  <moz@compsoc.man.ac.uk>
 
+	* gui/oprof_start.cpp: some improvements for RTC
+ 
+2002-01-15  John Levon  <moz@compsoc.man.ac.uk>
+
 	* dae/op_stop: fix "op_start && op_stop" bug using multiple
 	  dump_stop writes.
  
